Referentie toegevoegd, copyright notice van referentie toegevoegd in bijlage, standvanzaken aangevuld

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -1,28 +1,12 @@
 % Encoding: UTF-8
-@book{Knuth1998,
- author = {Knuth, Donald E.},
- title = {The art of computer programming,  volume 3: (2nd ed.) sorting and searching},
- year = {1998},
- publisher = {Addison Wesley Longman Publishing Co., Inc.},
- address = {Redwood City, CA, USA}
-}
 
-@book{Pollefliet2011,
-  author = {Pollefliet, Leen},
-  title = {Schrijven van verslag tot eindwerk: do's en don'ts},
-  year = {2011},
-  publisher = {Academia Press},
-  address = {Gent}
-}
-
-@article{Creeger2009,
-  author = {Creeger, Mache},
-  journal = {Communications of the ACM},
-  number = {8},
-  pages = {50--56},
-  title = {{CTO Roundtable: Cloud Computing}},
-  volume = {52},
-  year = {2009}
+@Online{Json2017,
+  author       = {ECMA},
+  date         = {2017},
+  title        = {The JSON Data Interchange Syntax},
+  url          = {https://www.ecma-international.org/publications/files/ECMA-ST-ARCH/ECMA-404 1st edition October 2013.pdf},
+  organization = {ECMA International},
+  urldate      = {2020-12-16},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
