--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -121,7 +121,8 @@ Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat 
 
 %%---------- Andere bijlagen --------------------------------------------------
 % TODO: Voeg hier eventuele andere bijlagen toe
-%\input{...}
+\chapter{Copyright Notice Ecma International}
+\input{copyright}
 
 %%---------- Referentielijst --------------------------------------------------
 
