--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -45,4 +45,20 @@
   url    = {https://medium.com/@EmperorRXF/evaluating-performance-of-rest-vs-grpc-1b8bdf0b22da},
 }
 
+@PhdThesis{Fielding2000,
+  author      = {Roy Thomas Fielding},
+  date        = {2000},
+  institution = {University of California, Irvine},
+  title       = {Architectural Styles and the Design of Network-based Software Architectures},
+}
+
+@Online{N.Freed1996,
+  author    = {N. Freed, N. Borenstein},
+  date      = {1996},
+  title     = {Multipurpose Internet Mail Extensenions (MIME) Part One: Format of Internet Message Bodies},
+  url       = {https://tools.ietf.org/html/rfc2045},
+  urldate   = {2021-03-14},
+  timestamp = {2021-03-14},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
