--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -20,16 +20,16 @@ De inleiding moet de lezer net genoeg informatie verschaffen om het onderwerp te
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}
 \label{sec:probleemstelling}
 
-Zoals eerder vermeld in deze bachelorproef is The Fashion Society constant aan het uitbreiden, dit onder meer door overnames en het openen van eigen nieuwe ZEB winkels. Elk van deze nieuwe winkels werkt via het centraal systeem en maakt dus onwetend gebruik van de Discovery API bij ondermeer het informeren van de stock, verkopen van een artikel, etc. Naarmate er meer winkels zijn zullen er ook meer gelijktijdige requests afgehandeld worden door de Discovery API. Door deze toename aan requests kan het al eens zijn dat de performantie daalt. Met dit onderzoek wordt hierop ingespeeld en wordt gekeken of gRPC met Protocol Buffers een performanter alternatief kan zijn op de huidige implementatie.
+The Fashion Society is constant aan het uitbreiden, dit onder meer door overnames en het openen van eigen nieuwe ZEB winkels. Elk van deze nieuwe winkels werkt via het centraal systeem en maakt gebruik van de Discovery API bij ondermeer het informeren van de stock, verkopen van een artikel, etc. De Discovery API is een API die aan de hand van een binnenkomende call het adres van de gevraagde API gaat ophalen om aan te spreken. Naarmate er meer winkels zijn zullen er ook meer gelijktijdige requests afgehandeld worden door de Discovery API. Door deze toename aan requests kan de performantie dalen. Met dit onderzoek wordt hierop ingespeeld en wordt gekeken of gRPC met Protocol Buffers een performanter alternatief is op de huidige implementatie.
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}
 \label{sec:onderzoeksvraag}
 
-De onderzoeksvragen die gevormt worden bij de vergelijking tussen gRPC met Protocol Buffers en REST met JSON zullen dan ook zijn als volgt.
+De onderzoeksvragen die gevormd worden bij de vergelijking tussen gRPC met Protocol Buffers en REST met JSON zijn als volgt.
 \begin{itemize}
     \item Welk dataformaat is het meest performant voor de Discovery API van The Fashion Society?
     \item Is gRPC met ProtocolBuffers sneller dan REST API met JSON voor de implementatie van The Fashion Society?
-    \item Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON voor de implementatie van The Fashion Society?
+    \item Is gRPC met ProtocolBuffers efficiënter dan REST API met JSON op gebied van CPU gebruik voor de implementatie van The Fashion Society?
 \end{itemize}
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}
